@startuml

'skinparam monochrome true
'skinparam classBackgroundColor White
skinparam classArrowColor Black
skinparam classBorderColor Black
skinparam stereotypeCBackgroundColor Gray
'hide members
hide circle

class user #LightBlue {
    +id      
    #name   
    alias    
    mobile      
    email        
    avatar_id   
    anonymous   
    login_at
    create_time
    update_time
}

class group {
    +id
    #name
    alias
    owner
    create_time
    update_time
    desc
}

class avatar {
    +id
    url
    create_time
}

class catalog {
    +id
    pid
    name
    desc
}

class entity #LightBlue {
    +id
    name
    catalog_id
    desc
    quality
    price
    create_time
    update_time
    user_id
    anonymous
}

class favorite {
    +id
    create_time
    update_time
    valid
    #entity_id
    #user_id
    anonymous
}

class comment {
    +id
    pid
    content
    entity_id
    create_time
    user_id
    anonymous
}

class auction {
    +id
    entity_id
    price
    create_time
    user_id
    anonymous
}

class image {
    +id
    url
    create_time
    user_id
    entity_id
}

class action #LightGray {
    +id
    name
    desc
}

class activity #LightGray {
    +id
    user_id
    action_id
    desc
}

group o-l- user
user -r-> avatar
entity -l-> catalog
entity -r-> user
catalog --> catalog : pid

image -u-> entity
favorite -u-> user
favorite -u-> entity

comment -u-> user
comment -u-> entity
comment --> comment : pid

auction -u-> user
auction -u-> entity

activity -u-> action
activity -u-> user

@enduml